# kinban_board

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  exceptions.py  hello_world.py  main.py  pyproject.toml  tmp.ipynb  tmp.py
src/: config.py  database.py  exceptions.py
src/auth/: auth.py  dependencies.py  router.py
src/migrations/: env.py
src/migrations/versions/: 6d21947ea7e1_added_table_kanbanboard.py  72bae2df2492_initial_commit.py
src/models/: __init__.py  kanban_board.py  user_account.py
src/schemas/: auth.py
